Bug 871279 - Some pop-up windows show the tabs too high in the titlebar, r=mconley
UltraBlame original commit: 8527c9d9e340f6d72d3def6a896ddb737abd6580

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -29,12 +29,12 @@
 
 
 
-#toolbar-menubar:not([inactive]) {
-  margin-bottom: 3px;
+#toolbar-menubar:not([inactive]) ~ #TabsToolbar {
+  margin-top: 3px;
 }
 
-#main-window[sizemode="normal"] #toolbar-menubar[autohide="true"][inactive] {
-  margin-bottom: 15px;
+#main-window[sizemode="normal"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
+  margin-top: 15px;
 }
 
 #toolbar-menubar:not([autohide="true"]) {
